--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
   "dependencies": {
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
+    "husky": "^4.2.5",
     "jquery": "^3.4.1",
+    "lint-staged": "^10.1.4",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "popper.js": "^1.16.1",
+    "prettier": "^2.0.4",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.0",
@@ -41,7 +44,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "react-spring": "^9.0.0-canary.808.17.55c5691",
-    "react-useanimations": "^1.1.6",
+    "react-useanimations": "^1.0.4",
     "whatwg-fetch": "^3.0.0"
   },
   "browserslist": {
@@ -58,5 +61,15 @@
   },
   "devDependencies": {
     "resize-observer-polyfill": "^1.5.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
   }
 }
