--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-portfolio",
-  "homepage": "portfolio",
+  "homepage": "/portfolio/",
   "version": "1.0.0",
   "description": "A simple webpage displaying my recent works",
   "main": "index.jsx",
@@ -35,6 +35,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
+    "p5": "^1.0.0",
     "popper.js": "^1.16.1",
     "prettier": "^2.0.4",
     "react": "^16.13.0",
