--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "my-portfolio",
-  "homepage": "/portfolio/",
   "version": "1.0.0",
   "description": "A simple webpage displaying my recent works",
-  "main": "index.jsx",
+  "main": "src/index.tsx",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -27,27 +26,26 @@
   },
   "dependencies": {
     "@babel/compat-data": "7.8.0",
-    "animate.css": "^3.7.2",
+    "@types/node": "^13.13.2",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
     "bootstrap": "^4.4.1",
+    "flubber": "^0.4.2",
     "husky": "^4.2.5",
     "jquery": "^3.4.1",
     "lint-staged": "^10.1.4",
     "lodash": "^4.17.15",
-    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
-    "p5": "^1.0.0",
-    "popper.js": "^1.16.1",
     "prettier": "^2.0.4",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
-    "react-markdown": "^4.3.1",
-    "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "react-spring": "^9.0.0-canary.808.17.55c5691",
     "react-useanimations": "^1.0.4",
+    "typescript": "^3.8.3",
     "whatwg-fetch": "^3.0.0"
   },
   "browserslist": {
@@ -63,7 +61,9 @@
     ]
   },
   "devDependencies": {
-    "resize-observer-polyfill": "^1.5.1"
+    "source-map-explorer": "^2.4.2",
+    "webpack-bundle-analyzer": "^3.7.0",
+    "webpack-cli": "^3.3.11"
   },
   "husky": {
     "hooks": {
