--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "scp -r -P 27416 build/* root@104.224.142.164:/var/www/html/portfolio/"
   },
   "repository": {
     "type": "git",
