--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/react-dom": "^16.9.6",
     "bootstrap": "^4.4.1",
     "flubber": "^0.4.2",
+    "he": "^1.2.0",
+    "html-react-parser": "^0.10.5",
     "husky": "^4.2.5",
     "jquery": "^3.4.1",
     "lint-staged": "^10.1.4",
