--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "husky": "^4.2.5",
     "jquery": "^3.4.1",
     "lint-staged": "^10.1.4",
-    "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "prettier": "^2.0.4",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
+    "react-pdf": "4.2.0-beta",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "react-spring": "^9.0.0-canary.808.17.55c5691",
