--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "src/index.tsx",
   "homepage": "portfolio/",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "react-scripts build; scp -r -P 27416 build/* root@104.224.142.164:/var/www/html/portfolio/"
+    "deploy": "react-app-rewired build; scp -r -P 27416 build/* root@104.224.142.164:/var/www/html/portfolio/"
   },
   "repository": {
     "type": "git",
@@ -41,6 +41,7 @@
     "node-sass": "^4.13.1",
     "prettier": "^2.0.4",
     "react": "^16.13.0",
+    "react-app-rewired": "^2.1.6",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
